--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "moment": "^2.22.2",
+    "react-native-modal-datetime-picker": "^6.0.0",
     "tinycolor2": "^1.4.1"
   }
 }
