--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "moment": "^2.22.2",
+    "moment-range": "^4.0.1",
     "react-native-calendars": "^1.21.0",
     "react-native-collapsible": "^1.2.0",
     "tinycolor2": "^1.4.1"
